adição de botões de controle no carousel

--- a/index.html
+++ b/index.html
@@ -49,12 +49,24 @@
                         <img src="images/casa-de-eventos-festa.png" alt="local a céu aberto " srcset="">
                     </div>
                     <div class="carousel-item" data-bs-interval="2500">
-                        <img src="images/festa.png" alt=" pizza" srcset="">
+                        <img src="images/festa.png" alt="mesa de dj e festa ao fundo" srcset="">
                     </div>
                     <div class="carousel-item" data-bs-interval="2500">
-                        <img src="images/mesas.png" alt="tomates cerejas e uma massa em uma mesa" srcset="">
+                        <img src="images/mesas.png" alt="restaurante e varias mesas" srcset="">
                     </div>
                 </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </button>
+                <div class="carousel-indicators">
+                    <button class="active" type="button" data-bs-target="#carousel" data-bs-slide-to="0"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"></button>
+                </div>
+            </div>
                 <div class="container pt-5 pb-5">
                     <div class="row">
                         <div class="col-md-6">
